<resources>
    <string name="app_name">Seller</string>

    <!-- Dialog-->
    <string name="check_network_lte">LTE</string>

    <!-- Drawer header-->
    <string name="nav_header_login">@string/login</string>
    <string name="nav_header_register">@string/register</string>
    <!--Drawer footer-->
    <string name="nav_drawer_text1">서비스 이용문의 : 010&#8211;6422&#8211;6662</string>
    <string name="nav_drawer_text2">이메일 : kangjin1988@naver.com</string>
    <string name="nav_drawer_text3">서비스 제휴문의 : kangjinhee88@gmail.com</string>

    <!--Login Fragment-->
    <string name="loginFragmentTitle">@string/login</string>
    <string name="login_email_hint">이메일 주소 입력</string>
    <string name="login_password_hint">비밀번호 입력</string>
    <string name="login_btn">@string/login</string>
    <string name="login_register_btn">@string/register</string>

    <!--Register Fragment-->
    <string name="registerFragmentTitle">@string/register</string>
    <string name="register_email_hint">이메일 주소 입력(필수)</string>
    <string name="register_password_hint">비밀번호 입력(필수/최소8자리이상)</string>
    <string name="register_password_confirm_hint">비밀번호 확인(필수)</string>
    <string name="register_displayName_hint">닉네임 입력</string>
    <string name="register_btn">가입</string>

    <!--Inquire Fragment-->
    <string name="inquire_name_text">이름</string>
    <string name="inquire_email_text">@string/email</string>
    <string name="inquire_title_text">제목</string>
    <string name="inquire_contents_text">문의내용</string>
    <string name="inquire_attachments_text">첨부파일</string>
    <string name="inquire_acceptance_text">약관동의</string>
    <string name="inquire_acceptance_btn_on"><![CDATA[✔]]> 개인정보 수집 및 이용 동의</string>
    <string name="inquire_acceptance_btn_off">개인정보 수집 및 이용 동의</string>
    <string name="inquire_acceptance_expand_click_text">개인정보 수집 및 이용 동의 내용보기</string>
    <string name="inquire_complete_btn">작성완료</string>

    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="email">이메일</string>


</resources>
