<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="30">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginFragmentTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="10"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/login_id_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <requestFocus/>
        </EditText>



        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/login_id_et"/>
        <Button
            android:id="@+id/login_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/login_id_et"
            android:layout_toEndOf="@+id/login_id_et"
            android:layout_alignTop="@+id/login_id_et"
            android:layout_alignBottom="@+id/login_password_et"
            android:maxLines="1"
            android:text="@string/login_btn"
            android:textSize="20sp"
            android:gravity="center"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_btn"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />



    <Button
        android:id="@+id/login_google_sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="Google 계정으로 로그인"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>


</LinearLayout>
