<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="start"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- Drawer header -->
        <include layout="@layout/nav_header"/>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:background="@color/white"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/nav_entries_root_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <android.support.v7.widget.RecyclerView
                   android:id="@+id/nav_items_rv"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  />



                <!-- Drawer footer -->
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_drawer_items8"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@color/nav_footer_ll_bg"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/nav_drawer_vertical_keyline_icon_left"
            android:layout_marginStart="@dimen/nav_drawer_vertical_keyline_icon_left"
            android:src="@drawable/ic_small_logo"
            tools:ignore="ContentDescription"
            android:tint="@color/black"
            android:scaleType="fitXY"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/nav_footer_divide"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="start|center_vertical"
            >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="7sp"

            android:layout_gravity="center_vertical"
            android:text="@string/nav_drawer_text1"

            />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="7sp"

                android:layout_gravity="center_vertical"
                android:text="@string/nav_drawer_text2"

                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="7sp"
                android:layout_gravity="center_vertical"
                android:text="@string/nav_drawer_text3"

                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>